# Proton-Inject

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  go.mod  go.sum  main.go  release.sh
.github/workflows/: build.yml
cli/: cli.go
config/: config.go
embedded/: embed.go
embedded/injector/: injector_wrap.go
embedded/injector/injector_exe/: Cargo.toml
embedded/injector/injector_exe/src/: main.rs
embedded/loader/: Cargo.toml
embedded/loader/src/: lib.rs
gui/: app.go  dialogs.go  gui.go  inject.go  loader.go  logs.go  profiles.go  status.go
scripts/: build.sh  release.sh
utils/: utils.go
