[package]
name = "proton-inject-loader"
version = "0.1.0"
edition = "2024"

[dependencies.windows]
version = "0.61.1"
features = ["Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_System_Console", "Win32_System_SystemServices", "Win32_Storage_FileSystem"]

[dependencies]
notify = "6.1"
walkdir = "2.5"
once_cell = "1.19"
dirs = "5.0"

[lib]
name = "loader"
crate-type = ["cdylib"]